regression-tests/test-results/clang-12-c++20/pure2-bugfix-for-non-local-function-expression.cpp.output
pure2-bugfix-for-non-local-function-expression.cpp2:5:34: error: lambda expression in an unevaluated operand
template<typename T> concept v = []() -> bool { return true;  }(); 
                                 ^
pure2-bugfix-for-non-local-function-expression.cpp2:7:20: error: lambda expression in an unevaluated operand
using u = decltype([]() -> void{});
                   ^
pure2-bugfix-for-non-local-function-expression.cpp2:9:26: error: lambda expression in an unevaluated operand
class t: public decltype([]() -> void{}) {
                         ^
3 errors generated.
